--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "security-demo"
 main = "src/index.ts"
+workers_dev = true
 compatibility_date = "2024-08-06"
 compatibility_flags = ["nodejs_compat"]
 
